--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,5 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>https://github.com/kim-hansol99/portfolio.git</h1>
-    <p>ㅇ고 또 왜 안되냐...</p>
 </body>
 </html>
