--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
-<body style="background-color: #3e295e;">
+<body>
     <header>
         <img src="./images/planet_1.png" alt="planet">
         <img src="./images/planet_2.png" alt="planet">
-        <img src="./images/spaceship_he.png" alt="spaceship">
+        <img src="./images/spaceship_he.png" alt="spaceship" class="he">
         <img src="./images/planet_3.png" alt="planet">
         <img src="./images/planet_4.png" alt="planet">
     </header>
@@ -22,8 +23,6 @@
                 <img src="./images/brightly.png" alt="background">
 
                 <div class="hover">
-                    
-
                     <img src="./images/frame.png" alt="frame">
                     <img src="./images/hs_01.jpg" alt="hs">
                     <img src="./images/hs_02.jpg" alt="hs">
