--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <header>
-        <img src="./images/planet_1.png" alt="planet">
-        <img src="./images/planet_2.png" alt="planet">
-        <img src="./images/spaceship_he.png" alt="spaceship" class="he">
-        <img src="./images/planet_3.png" alt="planet">
-        <img src="./images/planet_4.png" alt="planet">
+        <img src="./images/planet_1.png" alt="planet" class="planet_1">
+        <img src="./images/planet_2.png" alt="planet" class="planet_2">
+        <div class="spaceship_flex">
+            <img src="./images/spaceship_he.png" alt="spaceship" class="spaceship">
+            <div class="glow"></div>
+        </div>
+        <img src="./images/planet_3.png" alt="planet" class="planet_3">
+        <img src="./images/planet_4.png" alt="planet" class="planet_4">
     </header>
 
     <main>
         <section class="hello">
             <div class="hello_img">
                 <img src="./images/spaceship.png" alt="spaceship">
-                <img src="./images/brightly.png" alt="background">
 
                 <div class="hover">
-                    <img src="./images/frame.png" alt="frame">
+                    <img src="./images/frame.png" alt="frame" class="frame">
                     <img src="./images/hs_01.jpg" alt="hs">
                     <img src="./images/hs_02.jpg" alt="hs">
                     <img src="./images/hs_03.jpg" alt="hs">
@@ -31,18 +33,20 @@
             </div>
 
             <div class="hello_text">
-                <h1>Hello!!</h1>
+                <h1>Hello!</h1>
                 <h2>universe!!</h2>
+                <p>신입 개발자 김한솔입니다!</p>
                 <ul class="pr_list">
                     <li>깊게 또 넓게 생각합니다.</li>
                     <li>늘 새로운것을 떠올립니다.</li>
-                    <li>다양한 의견을 나눌는걸 좋아합니다.</li>
+                    <li>다양한 의견을 나누는 걸 좋아합니다.</li>
                 </ul>
-
+                
                 <ul class="history_list">
                     <li>한국 폴리텍 대학 춘천 캠퍼스 졸업</li>
                     <li>iibl 웹 퍼블리셔 과정 수료</li>
                 </ul>
+                <p class="view"><img src="./svg/star.svg"><span>더보기</span><img src="./svg/star.svg"></p>
             </div>
         </section>
 
