--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <h1>Hello!</h1>
                 <h2>universe!!</h2>
                 <p>신입 개발자 김한솔입니다!</p>
+                <p class="view"><img src="./svg/star.svg"><span>더보기</span><img src="./svg/star.svg"></p>
                 <ul class="pr_list">
                     <li>깊게 또 넓게 생각합니다.</li>
                     <li>늘 새로운것을 떠올립니다.</li>
@@ -46,15 +47,14 @@
                     <li>한국 폴리텍 대학 춘천 캠퍼스 졸업</li>
                     <li>iibl 웹 퍼블리셔 과정 수료</li>
                 </ul>
-                <p class="view"><img src="./svg/star.svg"><span>더보기</span><img src="./svg/star.svg"></p>
             </div>
         </section>
 
         <section class="skill">
             <div class="skill_img">
-                <img src="./images/html_css.png" alt="html_css">
-                <img src="./images/adobe.png" alt="adobe">
-                <img src="./images/js.png" alt="js">
+                <img src="./images/html_css.png" alt="html_css" class="html_css">
+                <img src="./images/adobe.png" alt="adobe" class="adobe">
+                <img src="./images/js.png" alt="js" class="js">
             </div>
 
             <div class="center">
@@ -64,11 +64,9 @@
             </div>
 
             <div class="circle_svg">
-                <svg>
-                    <circle cx="50%" cy="50%" r="40%" fill="#e255e"/>
-                    <circle cx="50%" cy="50%" r="34%" fill="#000000" />
-                    <circle cx="50%" cy="50%" r="27%" fill="#ffffff" />
-                </svg>
+                <img src="./svg/circle1.svg" alt="circle" class="circle1">
+                <img src="./svg/circle2.svg" alt="circle" class="circle2">
+                <img src="./svg/circle3.svg" alt="circle" class="circle3">
             </div>
         </section>
 
@@ -81,89 +79,70 @@
 
         <section class="etc">
             <div class="clipPath">
-                <svg xmlns="http://www.w3.org/2000/svg" width="245.062" height="191.44" viewBox="0 0 245.062 191.44">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26%" height="26%" viewBox="0 0 245.062 191.44">
                     <defs>
                         <clipPath id="stone_1">
                             <path d="M316.564,4980.09s-18.3-108.55,69.216-86.79,95.471,79.1,151.162,73.93,5.238,129.35-93.879,113.31S316.564,4980.09,316.564,4980.09Z" transform="translate(-314.969 -4890.44)"/>
                         </clipPath>
                     </defs>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="211.5" height="186.22" viewBox="0 0 211.5 186.22">
+                    <image width="100%" height="130%" clip-path="url(#stone_1)" y="-10px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 1 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="28%" height="28%" viewBox="0 0 211.5 186.22">
                     <defs>
                         <clipPath id="stone_2">
                             <path d="M1323.5,5192.74s86.73-67.85,141.35-33.51,19.71,61.72,34.78,75.62-49.1,128.6-140.26,94.65S1279.47,5223.47,1323.5,5192.74Z" transform="translate(-1290.31 -5149.53)"/>
                         </clipPath>
                     </defs>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="229.128" height="189.74" viewBox="0 0 229.128 189.74">
+                    <image width="100%" height="130%" clip-path="url(#stone_2)" y="-20px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 2 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="25%" height="25%" viewBox="0 0 229.128 189.74">
                     <defs>
                         <clipPath id="stone_3">
                             <path d="M981.78,5097.49c22.37-80,88.4-134.49,166-112.02s80.29,84.79-2.28,141.69S954.769,5194.1,981.78,5097.49Z" transform="translate(-977.562 -4980.38)"/>
                         </clipPath>
                     </defs>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="202" height="206.5" viewBox="0 0 202 206.5">
+                    <image width="100%" height="130%" clip-path="url(#stone_3)" y="-10px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 3 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24%" height="24%" viewBox="0 0 202 206.5">
                     <defs>
                         <clipPath id="stone_4">
                             <path d="M622.551,5313.65s-92.558-38.12-8.076-109.03,157.225-90.12,158.948-29.1-56.874,63.4-58.791,89.83,92.237-7.91,59.286,47.86S692.3,5341.15,622.551,5313.65Z" transform="translate(-578.906 -5138.97)"/>
                         </clipPath>
                     </defs>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="318.16" height="262.82" viewBox="0 0 318.16 262.82">
+                    <image width="110%" height="140%" clip-path="url(#stone_4)" y="-45px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 4 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="30%" height="30%" viewBox="0 0 318.16 262.82">
                     <defs>
                         <clipPath id="stone_5">
                             <path d="M762.951,4800.34c42.8-54.35,119.744-142.47,201.842-138.09s125.507,112.37,54.927,149.7-66.772,3.33-128.769,78.42S676.427,4910.21,762.951,4800.34Z" transform="translate(-737 -4662.09)"/>
                         </clipPath>
                     </defs>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="283.406" height="234.97" viewBox="0 0 283.406 234.97">
+                    <image width="100%" height="130%" clip-path="url(#stone_5)" y="-15px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 5 -->
+                <svg xmlns="http://www.w3.org/2000/svg"width="27%" height="27%" viewBox="0 0 283.406 234.97">
                     <defs>
                         <clipPath id="stone_6">
                             <path d="M420.012,4422.4s64.9-64.31,130.366-.34,144.127,114.71,119.339,148.26-68.655,67.45-147.532,56.17S339.665,4481.55,420.012,4422.4Z" transform="translate(-390.969 -4393.72)"/>
                         </clipPath>
                     </defs>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="268.69" height="172.35" viewBox="0 0 268.69 172.35">
-                        <defs>
-                            <clipPath id="stone_7">
-                                <path d="M1473.93,4445.17c-14.88,64.34-102.45,124.68-163.6,107.11s-43.83,11.18-87.76-7.41,7.93-108.05,117.67-146.54S1484.18,4400.85,1473.93,4445.17Z" transform="translate(-1206.97 -4383.03)"/>
-                            </clipPath>
-                        </defs>
-                    </svg>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="358.53" height="247.97" viewBox="0 0 358.53 247.97">
+                    <image width="100%" height="130%" clip-path="url(#stone_6)" y="-15px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 6 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24%" height="24%" viewBox="0 0 268.69 172.35">
+                    <defs>
+                        <clipPath id="stone_7">
+                            <path d="M1473.93,4445.17c-14.88,64.34-102.45,124.68-163.6,107.11s-43.83,11.18-87.76-7.41,7.93-108.05,117.67-146.54S1484.18,4400.85,1473.93,4445.17Z" transform="translate(-1206.97 -4383.03)"/>
+                        </clipPath>
+                    </defs>
+                    <image width="100%" height="160%" clip-path="url(#stone_7)" y="-50px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
+                </svg> <!--! 7 -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="28%" height="28%" viewBox="0 0 358.53 247.97">
                     <defs>
                         <clipPath id="stone_8">
                             <path d="M1252.5,4774.18c22-41.88,179.31-41.04,285.45,69.21s46.23,117.49,15.08,144.22-203.37-5.47-260.59-105.37S1229.12,4818.67,1252.5,4774.18Z" transform="translate(-1239.72 -4748.62)"/>
                         </clipPath>
                     </defs>
-                </svg>
-            </div>
-            
-            <div class="stone">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 245.062 191.44">
-                    <image width="100%" height="130%" clip-path="url(#stone_1)" y="-10px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 211.5 186.22">
-                    <image width="100%" height="130%" clip-path="url(#stone_2)" y="-20px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 229.128 189.74">
-                    <image width="100%" height="130%" clip-path="url(#stone_3)" y="-10px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 202 206.5">
-                    <image width="110%" height="140%" clip-path="url(#stone_4)" y="-45px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 318.16 262.82">
-                    <image width="100%" height="130%" clip-path="url(#stone_5)" y="-15px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 283.406 234.97">
-                    <image width="100%" height="130%" clip-path="url(#stone_6)" y="-15px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 268.69 172.35">
-                    <image width="100%" height="160%" clip-path="url(#stone_7)" y="-50px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 358.53 247.97">
                     <image width="100%" height="150%" clip-path="url(#stone_8)" y="-10px" xlink:href="http://127.0.0.1:5500/images/hs_01.jpg"/>
-                </svg>
+                </svg> <!--! 8 -->
             </div>
         </section>
     </main>
