--- a/index.html
+++ b/index.html
@@ -57,23 +57,29 @@
 
         <section class="skill">
             <div class="wrapper">
-                <div class="skill_img">
-                    <div class="skill-planet">
-                        <img src="./images/html_css.png" alt="html_css" class="html_css">
-                    </div>
-                    <img src="./images/adobe.png" alt="adobe" class="adobe">
-                    <img src="./images/js.png" alt="js" class="js">
-                </div>
-                
-                <div class="show_image">
-                </div>
-                
-                <div class="circle_pc">
-                    <img src="./svg/circle1.svg" alt="circle" class="circle1">
-                    <img src="./svg/circle2.svg" alt="circle" class="circle2">
-                    <img src="./svg/circle3.svg" alt="circle" class="circle3">
-                </div>
+                <div class="solar-system">
+                    <div id="show_image"></div>
 
+                    <div class="orbit adobe-orbit"></div>
+                    <div class="adobe-spin">
+                        <div><img id="adobe" src="./images/adobe.png" alt=""></div>
+                    </div>
+
+                    <div class="orbit html_css-orbit"></div>
+                    <div class="html_css-spin">
+                        <div><img id="html_css" src="./images/html_css.png" alt=""></div>
+                    </div>
+
+                    <div class="orbit js-orbit"></div>
+                    <div class="js-spin">
+                        <div><img id="js" src="./images/js.png" alt=""></div>
+                    </div>
+
+                    <div class="orbit mars-orbit"></div>
+                    <div class="mars-spin">
+                        <div id="mars"></div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -101,10 +107,9 @@
     </main>
 
     <footer>
-        <h2>EMAIL</h2>
-        <p>khs990920@naver.com</p>
-        <div class="copyright">
-            <img src="./images/footer.png" alt="© 2022 KIMHANSOL" class="footer">
+        <div class="fo">
+            <h2>EMAIL</h2>
+            <p>khs990920@naver.com</p>
         </div>
     </footer>
 </body>
