--- a/index.html
+++ b/index.html
@@ -58,26 +58,28 @@
         <section class="skill">
             <div class="wrapper">
                 <div class="solar-system">
-                    <div id="show_image"></div>
+                    <div id="show_image">
+                        <img src="./images/adobe.png" alt="img">
+                    </div>
 
                     <div class="orbit adobe-orbit"></div>
-                    <div class="adobe-spin">
+                    <div class="adobe-spin thumbnail">
                         <div><img id="adobe" src="./images/adobe.png" alt=""></div>
                     </div>
 
                     <div class="orbit html_css-orbit"></div>
-                    <div class="html_css-spin">
+                    <div class="html_css-spin thumbnail">
                         <div><img id="html_css" src="./images/html_css.png" alt=""></div>
                     </div>
 
                     <div class="orbit js-orbit"></div>
-                    <div class="js-spin">
+                    <div class="js-spin thumbnail">
                         <div><img id="js" src="./images/js.png" alt=""></div>
                     </div>
 
-                    <div class="orbit mars-orbit"></div>
-                    <div class="mars-spin">
-                        <div id="mars"></div>
+                    <div class="orbit scss-orbit"></div>
+                    <div class="scss-spin thumbnail">
+                        <div><img id="scss" src="./images/js.png" alt=""></div>
                     </div>
                 </div>
             </div>
