--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
-    <script src="./js/jquery.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/circle-progress.min.js"></script>
 </head>
 <body>
     <header>
@@ -59,7 +60,9 @@
             <div class="wrapper">
                 <div class="solar-system">
                     <div id="show_image">
-                        <img src="./images/adobe.png" alt="img">
+                        <div class='second circle'>
+                            <strong></strong>
+                        </div>
                     </div>
 
                     <div class="orbit adobe-orbit"></div>
