--- a/index.html
+++ b/index.html
@@ -61,28 +61,29 @@
                 <div class="solar-system">
                     <div id="show_image">
                         <div class='second circle'>
-                            <strong></strong>
+                            <strong>
+                            </strong>
                         </div>
                     </div>
 
                     <div class="orbit adobe-orbit"></div>
                     <div class="adobe-spin thumbnail">
-                        <div><img id="adobe" src="./images/adobe.png" alt=""></div>
+                        <div><img id="adobe" class="small" src="./images/adobe.png" alt=""></div>
                     </div>
 
                     <div class="orbit html_css-orbit"></div>
                     <div class="html_css-spin thumbnail">
-                        <div><img id="html_css" src="./images/html_css.png" alt=""></div>
+                        <div><img id="html_css" class="small" src="./images/html_css.png" alt=""></div>
                     </div>
 
                     <div class="orbit js-orbit"></div>
                     <div class="js-spin thumbnail">
-                        <div><img id="js" src="./images/js.png" alt=""></div>
+                        <div><img id="js" class="small" src="./images/js.png" alt=""></div>
                     </div>
 
                     <div class="orbit scss-orbit"></div>
                     <div class="scss-spin thumbnail">
-                        <div><img id="scss" src="./images/js.png" alt=""></div>
+                        <div><img id="scss" class="small" src="./images/js.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -90,10 +91,50 @@
 
         <section class="popol">
             <div class="wrapper">
-                <a href="#"><img src="./images/picture.png" alt="" class="po_1"></a>
-                <a href="#"><img src="./images/picture.png" alt="" class="po_2"></a>
-                <a href="#"><img src="./images/picture.png" alt="" class="po_3"></a>
-                <a href="#"><img src="./images/picture.png" alt="" class="po_4"></a>
+                <div class="po_1">
+                    <a href="#">
+                        <div class="popol_img">
+                            <img src="./images/picture.png" alt="">
+                        </div>
+                        <div class="popol_text">
+                            <h3>제주</h3>
+                            <p>제작기간<br>nn.nn - nn.nn</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="po_2">
+                    <a href="#">
+                        <div class="popol_img">
+                            <img src="./images/picture.png" alt="">
+                        </div>
+                        <div class="popol_text">
+                            <h3>제주</h3>
+                            <p>제작기간<br>nn.nn - nn.nn</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="po_3">
+                    <a href="#">
+                        <div class="popol_img">
+                            <img src="./images/picture.png" alt="">
+                        </div>
+                        <div class="popol_text">
+                            <h3>제주</h3>
+                            <p>제작기간<br>nn.nn - nn.nn</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="po_4">
+                    <a href="#">
+                        <div class="popol_img">
+                            <img src="./images/picture.png" alt="">
+                        </div>
+                        <div class="popol_text">
+                            <h3>제주</h3>
+                            <p>제작기간<br>nn.nn - nn.nn</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
 
