--- a/index.html
+++ b/index.html
@@ -54,15 +54,6 @@
             <div class="wrapper">
                 <div class="solar-system">
                     <div id="show_image">
-                        <div class='second circle'>
-                            <strong>
-                            </strong>
-                        </div>
-                    </div>
-
-                    <div class="thumbs">
-                        
-                    </div>
                     <div class="orbit adobe-orbit"></div>
                     <div class="adobe-spin thumbnail">
                         <div><img id="adobe" src="./images/adobe.png" alt=""></div>
@@ -89,24 +80,24 @@
         <section class="popol">
             <div class="wrapper">
                 <div class="po_1">
-                    <a href="#">
+                    <a href="./sub/simmons/simmons.html">
                         <div class="popol_img">
-                            <img src="./images/picture.png" alt="">
+                            <img src="./images/picture_slmmons.png" alt="slmmons">
                         </div>
                         <div class="popol_text">
-                            <h3>제주</h3>
-                            <p>제작기간<br>nn.nn - nn.nn</p>
+                            <h3>slmmons</h3>
+                            <p>제작기간<br>4주</p>
                         </div>
                     </a>
                 </div>
                 <div class="po_2">
-                    <a href="#">
+                    <a href="./sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html">
                         <div class="popol_img">
-                            <img src="./images/picture.png" alt="">
+                            <img src="./images/picture_Treasure_Road_in_Jeju.png" alt="">
                         </div>
                         <div class="popol_text">
-                            <h3>제주</h3>
-                            <p>제작기간<br>nn.nn - nn.nn</p>
+                            <h3>Treasure Road<br>in Jeju</h3>
+                            <p>제작기간<br>3주</p>
                         </div>
                     </a>
                 </div>
