--- a/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
+++ b/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Treasure_Road_in_Jeju.css">
-    <title>Document</title>
+    <link rel="shotcut icon" href="./images/spaceship.ico">
+    <title>Portfolio</title>
     <script src="./js/simmons.js"></script>
     <script src="./js/jquery.js"></script>
 </head>
@@ -56,9 +57,9 @@
                 
                 <div class="palette">
                     <div class="white"></div>
+                    <div class="skyblue"></div>
                     <div class="brown"></div>
                     <div class="black"></div>
-                    <div class="skyblue"></div>
                 </div>
                 
                 <div class="text">
@@ -120,6 +121,19 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="wrapper">
+            <a href="http://www.suu823.com/">
+                <div id="container">
+                    <button class="learn-more">
+                        <span class="circle" aria-hidden="true">
+                        <span class="icon arrow"></span>
+                        </span>
+                        <span class="button-text">바로가기</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
