--- a/sub/simmons/simmons.html
+++ b/sub/simmons/simmons.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/simmons.css">
-    <title>Document</title>
+    <link rel="shotcut icon" href="./images/spaceship.ico">
+    <title>Portfolio</title>
     <script src="./js/simmons.js"></script>
     <script src="./js/jquery.js"></script>
 </head>
