--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="po_2">
                     <a href="./sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html">
                         <div class="popol_img">
-                            <img src="./images/picture_Treasure_Road_in_Jeju.png" alt="">
+                            <img src="./images/picture_Treasure_Road_in_Jeju.png" alt="Treasure Road in Jeju">
                         </div>
                         <div class="popol_text">
                             <h3>Treasure Road<br>in Jeju</h3>
@@ -128,13 +128,13 @@
                     </a>
                 </div>
                 <div class="po_3">
-                    <a href="#">
+                    <a href="./sub/portfolio/portfolio.html">
                         <div class="popol_img">
-                            <img src="./images/picture.png" alt="">
+                            <img src="./images/picture_portfolio.png" alt="portfolio">
                         </div>
                         <div class="popol_text">
-                            <h3>제주</h3>
-                            <p>제작기간<br>nn.nn - nn.nn</p>
+                            <h3>Portfolio</h3>
+                            <p>제작기간<br>4주</p>
                         </div>
                     </a>
                 </div>
