--- a/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
+++ b/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
@@ -38,6 +38,7 @@
                     <p>
                         가상의 제주도 여행사 브랜드를 만들어 제작한 홈페이지 입니다. <Br>
                         브랜드 아이덴티티에 맞게 보물지도의 컨셉으로 디자인하여 사용자들이 여행지를 보물로 느끼게 디자인 하였습니다.
+                    </p>
                 </div>
                 
                 <div class="etc">
@@ -107,11 +108,11 @@
                         </div>
                         <div class="tablet">
                             <h2 class="sub_title">TABLET</h2>
-                            <img src="./images/pc.jpg" alt="pc">
+                            <img src="./images/pc.jpg" alt="tablet">
                         </div>
                         <div class="mobile">
                             <h2 class="sub_title">MOBILE</h2>
-                            <img src="./images/pc.jpg" alt="pc">
+                            <img src="./images/pc.jpg" alt="mobile">
                         </div>
                     </div>
                 </div>
