--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shotcut icon" href="./images/spaceship.ico">
     <title>Portfolio</title>
-    <script src="./js/index.js"></script>
     <script src="./js/jquery.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 <body>
     <header>
+        <a href="https://github.com/kim-hansol99/portfolio.git" target="_blank">
+            <img src="./images/git.png" alt="git" class="git">
+        </a>
+
         <img src="./images/planet_1.png" alt="planet" class="planet_1">
         <img src="./images/planet_2.png" alt="planet" class="planet_2">
         <div class="spaceship_flex">
@@ -142,7 +146,6 @@
                     <div></div>
                     <div></div>
                 </div>
-
             </div>
         </section>
 
