--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shotcut icon" href="./images/spaceship.ico">
+    <meta property="og:title" content="PORTFOLIO">
+    <meta property="og:description" content="Hello!">
+    <meta property="og:image" content="./images/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="ko">
     <title>Portfolio</title>
     <script src="./js/jquery.js"></script>
     <script src="./js/index.js"></script>
@@ -62,16 +68,12 @@
                     <ul class="list">
                         <li class="is_on">
                             <a href="#tab1" class="btn adobe">
-                                <div>
-                                    <img src="./svg/Adobe.svg" alt="Adobe">
-                                </div>
+                                <img src="./svg/Adobe.svg" alt="Adobe">
                             </a>
                         </li>
                         <li>
                             <a href="#tab2" class="btn html_css">
-                                <div>
-                                    <img src="./svg/HTML_CSS.svg" alt="HTML_CSS">
-                                </div>
+                                <img src="./svg/HTML_CSS.svg" alt="HTML_CSS">
                             </a>
                         </li>
                         <li>
@@ -96,48 +98,48 @@
                             </a>
                         </li>
                     </ul>
+                </div>
 
-                    <div class="cont_area">
-                        <div id="tab1" class="cont">
-                            <img src="./svg/Adobe.svg">
-                            <h2>HTML/CSS</h2>
-                            <h2>90%</h2>
-                            <p>
-                                로고 제작, 편집 디자인을 할수 있으며, 웹페이지 시안 작업이 가능합니다.
-                            </p>
-                        </div>
-                        <div id="tab2" class="cont">
-                            <img src="./svg/HTML_CSS.svg">
-                            <h2>HTML/CSS</h2>
-                            <h2>85%</h2>
-                            <p>
-                                자유롭게 구조를 만들고 다양한 호버 효과와 애니메이션을 적용할수 있습니다.<br>미디어쿼리를 사용하여 반응형 웹페이지를 제작할수 있습니다
-                            </p>
-                        </div>
-                        <div id="tab3" class="cont">
-                            <img src="./svg/SASS.svg">
-                            <h2>SASS</h2>
-                            <h2>90%</h2>
-                            <p>
-                                중복을 최소화하여 변수로 만들거나 믹스인을 적절히 사용하여 코드를 간결하게 작성할 수 있습니다.
-                            </p>
-                        </div>
-                        <div id="tab4" class="cont">
-                            <img src="./svg/JavaScript.svg">
-                            <h2>JavaScript</h2>
-                            <h2>50%</h2>
-                            <p>
-                                if, for, while문 등을 역할을 알고 있으며 공부하고 있습니다.
-                            </p>
-                        </div>
-                        <div id="tab5" class="cont">
-                            <img src="./svg/jQuery.svg">
-                            <h2>jQuery</h2>
-                            <h2>50%</h2>
-                            <p>
-                                다양한 이벤트들을 제어 할 수 있습니다.
-                            </p>
-                        </div>
+                <div class="cont_area">
+                    <div id="tab1" class="cont" >
+                        <img src="./svg/Adobe.svg">
+                        <h2>DESIGN TOOLS</h2>
+                        <h2>90%</h2>
+                        <p>
+                            로고 제작, 편집 디자인을 할수 있으며, 웹페이지 시안 작업이 가능합니다.
+                        </p>
+                    </div>
+                    <div id="tab2" class="cont">
+                        <img src="./svg/HTML_CSS.svg">
+                        <h2>HTML/CSS</h2>
+                        <h2>85%</h2>
+                        <p>
+                            자유롭게 구조를 만들고 다양한 호버 효과와 애니메이션을 적용할수 있습니다.<br>미디어쿼리를 사용하여 반응형 웹페이지를 제작할수 있습니다
+                        </p>
+                    </div>
+                    <div id="tab3" class="cont">
+                        <img src="./svg/SASS.svg">
+                        <h2>SASS</h2>
+                        <h2>90%</h2>
+                        <p>
+                            중복을 최소화하여 변수로 만들거나 믹스인을 적절히 사용하여 코드를 간결하게 작성할 수 있습니다.
+                        </p>
+                    </div>
+                    <div id="tab4" class="cont">
+                        <img src="./svg/JavaScript.svg">
+                        <h2>JavaScript</h2>
+                        <h2>50%</h2>
+                        <p>
+                            if, for, while문 등을 역할을 알고 있으며 공부하고 있습니다.
+                        </p>
+                    </div>
+                    <div id="tab5" class="cont">
+                        <img src="./svg/jQuery.svg">
+                        <h2>jQuery</h2>
+                        <h2>50%</h2>
+                        <p>
+                            다양한 이벤트들을 제어 할 수 있습니다.
+                        </p>
                     </div>
                 </div>
 
@@ -248,10 +250,6 @@
                                     <p>면도기 상세 페이지</p>
                                     <img src="./images/DP/DP_1.png" alt="면도기 상세페이지">
                                 </div>
-                                <div>
-                                    <p>투썸 여름 MD 상품 광고 배너 (240px)</p>
-                                    <img src="./images/2_240.png" alt="투썸">
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -318,12 +316,12 @@
                         <div class="modal-wrapper" data-wrapper="modal-wrapper-medium">
                             <div class="modal-content">
                                 <div class="title_border">
-                                    <h2>BI</h2>
+                                    <h2>BI - DONUT PLANET</h2>
                                     <img src="./images/x.png" class="close">
                                 </div>
                                 <div>
                                     <p>도넛 플레닛</p>
-                                    <img src="./images/bi/판넬_1.png" alt="도넛플레닛">
+                                    <img src="./images/bi/panel.png" alt="도넛플레닛">
                                     <img src="./images/bi/1.png">
                                     <img src="./images/bi/2.png">
                                     <img src="./images/bi/3.png">
