--- a/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
+++ b/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Treasure_Road_in_Jeju.css">
     <link rel="shotcut icon" href="./images/spaceship.ico">
+    <meta property="og:title" content="PORTFOLIO">
+    <meta property="og:description" content="Hello!">
+    <meta property="og:image" content="./images/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="ko">
     <title>Portfolio</title>
     <script src="./js/simmons.js"></script>
     <script src="./js/jquery.js"></script>
