--- a/sub/simmons/simmons.html
+++ b/sub/simmons/simmons.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/simmons.css">
     <link rel="shotcut icon" href="./images/spaceship.ico">
+    <meta property="og:title" content="PORTFOLIO">
+    <meta property="og:description" content="Hello!">
+    <meta property="og:image" content="./images/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="ko">
     <title>Portfolio</title>
     <script src="./js/simmons.js"></script>
     <script src="./js/jquery.js"></script>
@@ -14,7 +20,7 @@
     <header>
         <div class="wrapper">
             <div class="header_flex_box">
-                <a href="https://github.com/kim-hansol99/portfolio.git"  class="git" target="_blank">
+                <a href="https://github.com/Suu01/simmons.git"  class="git" target="_blank">
                     <img src="./images/git.png" alt="git">
                 </a>
                 <a href="javascript:history.back();"><img src="./svg/star.svg" alt="home"></a>
@@ -28,7 +34,7 @@
                 <img src="./images/simmons.png" alt="simmons_mockup">
 
                 <div class="but">
-                    <a href="/index.html" target="_blank">
+                    <a href="https://kim-hansol99.github.io/" target="_blank">
                         <div id="container">
                             <button class="learn-more">
                                 <span class="circle" aria-hidden="true">
